--- a/var/resource_config.json
+++ b/var/resource_config.json
@@ -1,1 +1,1 @@
-{"media_directory":"C:\\wamp\\www\\creo\\media","allowed_resources":["css","css_secure","js","favicon","email","wysiwyg","catalog","custom_options","dhl","captcha"],"update_time":"3600"}
+{"media_directory":"E:\\xampp\\htdocs\\creo\\media","allowed_resources":["css","css_secure","js","favicon","email","wysiwyg","catalog","custom_options","dhl","captcha"],"update_time":"3600"}
